# rust-php-parser

./: .gitignore  .gitmodules  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TEST_COVERAGE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  INSTRUMENTATION.md  LICENSE  PERFORMANCE_ANALYSIS.md  PROFILING_RESULTS_2026_03_15.md  README.md  ROADMAP.md
crates/php-ast/: Cargo.toml
crates/php-ast/src/: ast.rs  comment_map.rs  fold.rs  lib.rs  source_map.rs  span.rs  symbol_table.rs  visitor.rs
crates/php-ast/src/ast/: decls.rs  exprs.rs  misc.rs  mod.rs  names.rs  stmts.rs
crates/php-ast/tests/: fold.rs
crates/php-lexer/: Cargo.toml
crates/php-lexer/src/: lexer.rs  lib.rs  token.rs
crates/php-lexer/tests/: lexer.rs
crates/php-parser/: Cargo.toml  build.rs
crates/php-parser/benches/: parse.rs
crates/php-parser/examples/: measure_real_allocation.rs  profile.rs  profile_allocations.rs  profile_allocations_detailed.rs  profile_array_parsing.rs  profile_ast_construction.rs  profile_corpus.rs  profile_statements.rs  profile_symfony.rs  show_errors.rs  stress_test.rs
crates/php-parser/src/: diagnostics.rs  expr.rs  instrument.rs  interpolation.rs  lib.rs  parser.rs  phpdoc.rs  precedence.rs  source_map.rs  stmt.rs  version.rs
crates/php-parser/src/expr/: atom.rs  interpolation.rs  mod.rs
crates/php-parser/src/stmt/: class.rs  enum_decl.rs  mod.rs  trait_use.rs
crates/php-parser/tests/: common.rs  comprehensive_coverage.rs  corpus.rs  coverage_gaps.rs  fold.rs  inline_cases.rs  integration.rs  malformed_php.rs  nikic_error_tests.rs  nikic_expr_tests.rs  nikic_integration_tests.rs  nikic_misc_tests.rs  nikic_scalar_tests.rs  nikic_stmt_tests.rs  php_syntax.rs  visitor.rs
crates/php-parser/tests/common/: mod.rs
crates/php-parser/tests/fixtures/: abstract_and_final_methods.php  abstract_and_final_methods.phpt  abstract_readonly_class.php  abstract_readonly_class.phpt  alt_foreach_inline_html_terminates.php  alt_foreach_inline_html_terminates.phpt  alt_if_inline_html_terminates.php  alt_if_inline_html_terminates.phpt  alt_while_inline_html_terminates.php  alt_while_inline_html_terminates.phpt  alternative_syntax.php  alternative_syntax.phpt  anonymous_class_with_attribute.php  anonymous_class_with_attribute.phpt  anonymous_classes.php  anonymous_classes.phpt  arg_by_ref.phpt  arg_by_ref_preserved.phpt  array_access_chain.php  array_access_chain.phpt  array_call_not_confused_with_cast.php  array_call_not_confused_with_cast.phpt  array_cast_not_confused_with_array_call.php  array_cast_not_confused_with_array_call.phpt  array_cast_still_works.php  array_cast_still_works.phpt  array_destructuring.php  array_destructuring.phpt  array_element_by_ref.phpt  array_nested_unpack_syntax.phpt  array_old_syntax.php  array_old_syntax.phpt  array_operations.php  array_operations.phpt  array_push_syntax.php  array_push_syntax.phpt  array_spread_with_keys.php  array_spread_with_keys.phpt  array_unpack_with_string_keys.phpt  arrays.php  (+648 more)
crates/php-parser/tests/snapshots/: corpus__blockcomments.snap  corpus__comments_1.snap  corpus__errorhandling_eoferror_2.snap  corpus__errorhandling_lexererrors_1.snap  corpus__errorhandling_lexererrors_5.snap  corpus__errorhandling_recovery_1.snap  corpus__errorhandling_recovery_10.snap  corpus__errorhandling_recovery_13.snap  corpus__errorhandling_recovery_16.snap  corpus__errorhandling_recovery_18.snap  corpus__errorhandling_recovery_19.snap  corpus__errorhandling_recovery_2.snap  corpus__errorhandling_recovery_20.snap  corpus__errorhandling_recovery_23.snap  corpus__errorhandling_recovery_24.snap  corpus__errorhandling_recovery_26.snap  corpus__errorhandling_recovery_4.snap  corpus__errorhandling_recovery_5.snap  corpus__errorhandling_recovery_9.snap  corpus__expr_alternative_array_syntax_2.snap  corpus__expr_arraydestructuring.snap  corpus__expr_arrayemptyelemens.snap  corpus__expr_arrow_function.snap  corpus__expr_assignnewbyref_2.snap  corpus__expr_cast.snap  corpus__expr_closure_use_trailing_comma.snap  corpus__expr_comparison.snap  corpus__expr_concatprecedence_1.snap  corpus__expr_constant_expr.snap  corpus__expr_dynamicclassconst.snap  corpus__expr_fetchandcall_args.snap  corpus__expr_fetchandcall_funccall.snap  corpus__expr_fetchandcall_namedargs.snap  corpus__expr_fetchandcall_newderef.snap  corpus__expr_fetchandcall_staticcall.snap  corpus__expr_listreferences.snap  corpus__expr_match_1.snap  corpus__expr_match_3.snap  corpus__expr_match_4.snap  corpus__expr_math.snap  (+1329 more)
crates/php-phpdoc/: Cargo.toml
crates/php-phpdoc/src/: ast.rs  lib.rs  parser.rs  type_parser.rs
crates/php-phpdoc/tests/: fixtures.rs
crates/php-printer/: Cargo.toml
crates/php-printer/src/: lib.rs  precedence.rs  printer.rs
crates/php-printer/src/printer/: decls.rs  exprs.rs  helpers.rs  mod.rs  stmts.rs  types.rs
crates/php-printer/tests/: printer.rs
crates/php-printer/tests/fixtures/: abstract_final_readonly_class.phpt  abstract_method.phpt  alt_declare.phpt  alt_for.phpt  alt_foreach.phpt  alt_foreach_mixed_html.phpt  alt_foreach_short_echo.phpt  alt_if.phpt  alt_if_inline_html.phpt  alt_switch.phpt  alt_while.phpt  anonymous_class.phpt  anonymous_class_with_args.phpt  array_access_1.phpt  array_access_2.phpt  array_destructuring.phpt  array_literal_1.phpt  array_literal_2.phpt  array_spread.phpt  arrow_function.phpt  arrow_function_with_return_type.phpt  assign_by_ref.phpt  assign_ops_1.phpt  assign_ops_2.phpt  assign_ops_3.phpt  assign_ops_4.phpt  assign_ops_5.phpt  assign_ops_6.phpt  assign_ops_7.phpt  assign_ops_8.phpt  asymmetric_visibility.phpt  attributes.phpt  binary_arithmetic_1.phpt  binary_arithmetic_2.phpt  binary_arithmetic_3.phpt  binary_arithmetic_4.phpt  binary_arithmetic_5.phpt  binary_arithmetic_6.phpt  binary_arithmetic_7.phpt  binary_bitwise_1.phpt  (+214 more)
crates/php-wasm/: Cargo.toml  build.rs
crates/php-wasm/src/: lib.rs
crates/phpdoc-parser/: Cargo.toml
crates/phpdoc-parser/src/: ast.rs  lib.rs  parser.rs  span.rs
crates/phpdoc-parser/tests/: fixtures.rs
tools/ast-stats/: Cargo.toml
tools/ast-stats/src/: main.rs
(+1369 files in other folders)
