[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "crates/php-ast",
    "crates/php-lexer",
    "crates/php-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["jorgsowa"]
repository = "https://github.com/jorgsowa/rust-php-parser"
homepage = "https://github.com/jorgsowa/rust-php-parser"

[workspace.dependencies]
php-ast = { path = "crates/php-ast", version = "0.1.0" }
php-lexer = { path = "crates/php-lexer", version = "0.1.0" }
php-rs-parser = { path = "crates/php-parser", version = "0.1.0" }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
insta = "1"
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2"
mimalloc = { version = "0.1", default-features = false }
memchr = "2"
bumpalo = { version = "3", features = ["collections"] }
