[package]
name = "php-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PHP Abstract Syntax Tree (AST) node definitions"
keywords = ["php", "ast", "parser", "syntax"]
categories = ["parsing", "development-tools"]
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
bumpalo = { workspace = true }
