[package]
name = "php-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PHP lexer/tokenizer"
keywords = ["php", "lexer", "tokenizer", "parser"]
categories = ["parsing", "development-tools"]
readme = "../../README.md"

[dependencies]
php-ast = { workspace = true }
memchr = { workspace = true }
