[package]
name = "php-rs-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fast PHP parser producing a typed AST"
keywords = ["php", "parser", "ast", "syntax"]
categories = ["parsing", "development-tools", "compilers"]
readme = "../../README.md"

[dependencies]
php-ast = { workspace = true }
php-lexer = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
bumpalo = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
walkdir = { workspace = true }
mimalloc = { workspace = true }
bumpalo = { workspace = true }
pprof = { workspace = true }

[[bench]]
name = "parse"
harness = false
