[package]
name = "php-rs-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fast PHP parser producing a typed AST"
keywords = ["php", "parser", "ast", "syntax"]
categories = ["parsing", "development-tools", "compilers"]
readme = "../../README.md"
exclude = ["benches/", "tests/", "examples/", ".gitmodules"]

[dependencies]
php-ast = { workspace = true }
php-lexer = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
bumpalo = { workspace = true }
lazy_static = "1.4"

[dev-dependencies]
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
walkdir = { workspace = true }
mimalloc = { workspace = true }
bumpalo = { workspace = true }
pprof = { workspace = true }

[features]
default = []
# Enable lightweight instrumentation for profiling array parsing and expression parsing
instrument = []

[[bench]]
name = "parse"
harness = false
