[package]
name = "phpdoc-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Structural PHPDoc parser. Parses doc-comment blocks into a tag/prose AST with accurate spans; tag bodies exposed as raw text."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
walkdir    = { workspace = true }
rayon      = { workspace = true }

[[test]]
name = "fixtures"
path = "tests/fixtures.rs"
