[package]
name = "ast-stats"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
php-ast = { workspace = true }
php-rs-parser = { workspace = true }
bumpalo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }

[[bin]]
name = "ast-stats"
path = "src/main.rs"
